parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Codigo
Rule 1     Codigo -> Codigo Python
Rule 2     Codigo -> Codigo CodigoFun
Rule 3     Codigo -> Python
Rule 4     Codigo -> CodigoFun
Rule 5     CodigoFun -> ABREFP Fpython FECHAFP
Rule 6     Python -> REST
Rule 7     Fpython -> Fpython Funcao
Rule 8     Fpython -> Funcao
Rule 9     Funcao -> FUNABRE WORD ABREP Args FECHAP Corpofun FUNFECHA
Rule 10    Funcao -> FUNABRE WORD ABREP FECHAP Corpofun FUNFECHA
Rule 11    Args -> VarArgs
Rule 12    Args -> Args VIR VarArgs
Rule 13    Conjunto -> Conjunto VIR Result
Rule 14    Conjunto -> Result
Rule 15    Corpofun -> RETURN Result PV
Rule 16    Corpofun -> IF ABREP Cond FECHAP Corpofun ELSE Corpofun
Rule 17    Cond -> CondSimple
Rule 18    Cond -> Cond CONDAND CondSimple
Rule 19    Cond -> Cond CONDOR CondSimple
Rule 20    Cond -> NOT CondSimple
Rule 21    CondSimple -> ABREP Cond FECHAP
Rule 22    CondSimple -> ABREP Cond FECHAP Conds Varoper
Rule 23    CondSimple -> Varoper Conds ABREP Cond FECHAP
Rule 24    CondSimple -> ABREP Cond FECHAP Conds ABREP Cond FECHAP
Rule 25    CondSimple -> Varoper Conds Varoper
Rule 26    CondSimple -> Varoper
Rule 27    Conds -> MENOR
Rule 28    Conds -> MAIOR
Rule 29    Conds -> IGUAL
Rule 30    Conds -> DIFERENTE
Rule 31    Conds -> MAIORIGUAL
Rule 32    Conds -> MENORIGUAL
Rule 33    Conds -> IN
Rule 34    Result -> Opern Varoper
Rule 35    Result -> Opern ABREP Result FECHAP
Rule 36    Result -> Varoper
Rule 37    Result -> Result Oper Varoper
Rule 38    Result -> ABREP Result FECHAP
Rule 39    Result -> Result Oper ABREP Result FECHAP
Rule 40    Opern -> ADD
Rule 41    Opern -> MINUS
Rule 42    Oper -> Opern
Rule 43    Oper -> TIMES
Rule 44    Oper -> DIVIDE
Rule 45    Oper -> MOD
Rule 46    Oper -> OR
Rule 47    Oper -> AND
Rule 48    Oper -> Conds
Rule 49    Varoper -> Chamadafun
Rule 50    Varoper -> Var
Rule 51    Var -> NUMBER
Rule 52    Var -> BOOL
Rule 53    Var -> List
Rule 54    Var -> WORD
Rule 55    List -> ABREL FECHAL
Rule 56    List -> ABREL Conjunto FECHAL
Rule 57    List -> ABREL Result NEXT Conjunto2 FECHAL
Rule 58    Conjunto2 -> Result
Rule 59    Conjunto2 -> Conjunto2 NEXT Result
Rule 60    Chamadafun -> WORD ABREP FECHAP
Rule 61    Chamadafun -> WORD ABREP Conjunto FECHAP
Rule 62    VarArgs -> BOOL
Rule 63    VarArgs -> NUMBER
Rule 64    VarArgs -> Opern NUMBER
Rule 65    VarArgs -> ListArg
Rule 66    VarArgs -> WORD
Rule 67    ListArg -> ABREL FECHAL
Rule 68    ListArg -> ABREL ConjuntoListaArgs FECHAL
Rule 69    ListArg -> ABREL VarArgs NEXT Conjunto2ListaArgs FECHAL
Rule 70    ConjuntoListaArgs -> VarArgs
Rule 71    ConjuntoListaArgs -> ConjuntoListaArgs VIR VarArgs
Rule 72    Conjunto2ListaArgs -> VarArgs
Rule 73    Conjunto2ListaArgs -> Conjunto2ListaArgs NEXT VarArgs

Terminals, with rules where they appear

ABREFP               : 5
ABREL                : 55 56 57 67 68 69
ABREP                : 9 10 16 21 22 23 24 24 35 38 39 60 61
ADD                  : 40
AND                  : 47
BOOL                 : 52 62
CONDAND              : 18
CONDOR               : 19
DIFERENTE            : 30
DIVIDE               : 44
ELSE                 : 16
FECHAFP              : 5
FECHAL               : 55 56 57 67 68 69
FECHAP               : 9 10 16 21 22 23 24 24 35 38 39 60 61
FUNABRE              : 9 10
FUNFECHA             : 9 10
IF                   : 16
IGUAL                : 29
IN                   : 33
MAIOR                : 28
MAIORIGUAL           : 31
MENOR                : 27
MENORIGUAL           : 32
MINUS                : 41
MOD                  : 45
NEXT                 : 57 59 69 73
NOT                  : 20
NUMBER               : 51 63 64
OR                   : 46
PV                   : 15
REST                 : 6
RETURN               : 15
TIMES                : 43
VIR                  : 12 13 71
WORD                 : 9 10 54 60 61 66
error                : 

Nonterminals, with rules where they appear

Args                 : 9 12
Chamadafun           : 49
Codigo               : 1 2 0
CodigoFun            : 2 4
Cond                 : 16 18 19 21 22 23 24 24
CondSimple           : 17 18 19 20
Conds                : 22 23 24 25 48
Conjunto             : 13 56 61
Conjunto2            : 57 59
Conjunto2ListaArgs   : 69 73
ConjuntoListaArgs    : 68 71
Corpofun             : 9 10 16 16
Fpython              : 5 7
Funcao               : 7 8
List                 : 53
ListArg              : 65
Oper                 : 37 39
Opern                : 34 35 42 64
Python               : 1 3
Result               : 13 14 15 35 37 38 39 39 57 58 59
Var                  : 50
VarArgs              : 11 12 69 70 71 72 73
Varoper              : 22 23 25 25 26 34 36 37

Parsing method: LALR

state 0

    (0) S' -> . Codigo
    (1) Codigo -> . Codigo Python
    (2) Codigo -> . Codigo CodigoFun
    (3) Codigo -> . Python
    (4) Codigo -> . CodigoFun
    (6) Python -> . REST
    (5) CodigoFun -> . ABREFP Fpython FECHAFP

    REST            shift and go to state 4
    ABREFP          shift and go to state 5

    Codigo                         shift and go to state 1
    Python                         shift and go to state 2
    CodigoFun                      shift and go to state 3

state 1

    (0) S' -> Codigo .
    (1) Codigo -> Codigo . Python
    (2) Codigo -> Codigo . CodigoFun
    (6) Python -> . REST
    (5) CodigoFun -> . ABREFP Fpython FECHAFP

    REST            shift and go to state 4
    ABREFP          shift and go to state 5

    Python                         shift and go to state 6
    CodigoFun                      shift and go to state 7

state 2

    (3) Codigo -> Python .

    REST            reduce using rule 3 (Codigo -> Python .)
    ABREFP          reduce using rule 3 (Codigo -> Python .)
    $end            reduce using rule 3 (Codigo -> Python .)


state 3

    (4) Codigo -> CodigoFun .

    REST            reduce using rule 4 (Codigo -> CodigoFun .)
    ABREFP          reduce using rule 4 (Codigo -> CodigoFun .)
    $end            reduce using rule 4 (Codigo -> CodigoFun .)


state 4

    (6) Python -> REST .

    REST            reduce using rule 6 (Python -> REST .)
    ABREFP          reduce using rule 6 (Python -> REST .)
    $end            reduce using rule 6 (Python -> REST .)


state 5

    (5) CodigoFun -> ABREFP . Fpython FECHAFP
    (7) Fpython -> . Fpython Funcao
    (8) Fpython -> . Funcao
    (9) Funcao -> . FUNABRE WORD ABREP Args FECHAP Corpofun FUNFECHA
    (10) Funcao -> . FUNABRE WORD ABREP FECHAP Corpofun FUNFECHA

    FUNABRE         shift and go to state 10

    Fpython                        shift and go to state 8
    Funcao                         shift and go to state 9

state 6

    (1) Codigo -> Codigo Python .

    REST            reduce using rule 1 (Codigo -> Codigo Python .)
    ABREFP          reduce using rule 1 (Codigo -> Codigo Python .)
    $end            reduce using rule 1 (Codigo -> Codigo Python .)


state 7

    (2) Codigo -> Codigo CodigoFun .

    REST            reduce using rule 2 (Codigo -> Codigo CodigoFun .)
    ABREFP          reduce using rule 2 (Codigo -> Codigo CodigoFun .)
    $end            reduce using rule 2 (Codigo -> Codigo CodigoFun .)


state 8

    (5) CodigoFun -> ABREFP Fpython . FECHAFP
    (7) Fpython -> Fpython . Funcao
    (9) Funcao -> . FUNABRE WORD ABREP Args FECHAP Corpofun FUNFECHA
    (10) Funcao -> . FUNABRE WORD ABREP FECHAP Corpofun FUNFECHA

    FECHAFP         shift and go to state 11
    FUNABRE         shift and go to state 10

    Funcao                         shift and go to state 12

state 9

    (8) Fpython -> Funcao .

    FECHAFP         reduce using rule 8 (Fpython -> Funcao .)
    FUNABRE         reduce using rule 8 (Fpython -> Funcao .)


state 10

    (9) Funcao -> FUNABRE . WORD ABREP Args FECHAP Corpofun FUNFECHA
    (10) Funcao -> FUNABRE . WORD ABREP FECHAP Corpofun FUNFECHA

    WORD            shift and go to state 13


state 11

    (5) CodigoFun -> ABREFP Fpython FECHAFP .

    REST            reduce using rule 5 (CodigoFun -> ABREFP Fpython FECHAFP .)
    ABREFP          reduce using rule 5 (CodigoFun -> ABREFP Fpython FECHAFP .)
    $end            reduce using rule 5 (CodigoFun -> ABREFP Fpython FECHAFP .)


state 12

    (7) Fpython -> Fpython Funcao .

    FECHAFP         reduce using rule 7 (Fpython -> Fpython Funcao .)
    FUNABRE         reduce using rule 7 (Fpython -> Fpython Funcao .)


state 13

    (9) Funcao -> FUNABRE WORD . ABREP Args FECHAP Corpofun FUNFECHA
    (10) Funcao -> FUNABRE WORD . ABREP FECHAP Corpofun FUNFECHA

    ABREP           shift and go to state 14


state 14

    (9) Funcao -> FUNABRE WORD ABREP . Args FECHAP Corpofun FUNFECHA
    (10) Funcao -> FUNABRE WORD ABREP . FECHAP Corpofun FUNFECHA
    (11) Args -> . VarArgs
    (12) Args -> . Args VIR VarArgs
    (62) VarArgs -> . BOOL
    (63) VarArgs -> . NUMBER
    (64) VarArgs -> . Opern NUMBER
    (65) VarArgs -> . ListArg
    (66) VarArgs -> . WORD
    (40) Opern -> . ADD
    (41) Opern -> . MINUS
    (67) ListArg -> . ABREL FECHAL
    (68) ListArg -> . ABREL ConjuntoListaArgs FECHAL
    (69) ListArg -> . ABREL VarArgs NEXT Conjunto2ListaArgs FECHAL

    FECHAP          shift and go to state 17
    BOOL            shift and go to state 19
    NUMBER          shift and go to state 20
    WORD            shift and go to state 15
    ADD             shift and go to state 23
    MINUS           shift and go to state 24
    ABREL           shift and go to state 25

    Args                           shift and go to state 16
    VarArgs                        shift and go to state 18
    Opern                          shift and go to state 21
    ListArg                        shift and go to state 22

state 15

    (66) VarArgs -> WORD .

    FECHAP          reduce using rule 66 (VarArgs -> WORD .)
    VIR             reduce using rule 66 (VarArgs -> WORD .)
    NEXT            reduce using rule 66 (VarArgs -> WORD .)
    FECHAL          reduce using rule 66 (VarArgs -> WORD .)


state 16

    (9) Funcao -> FUNABRE WORD ABREP Args . FECHAP Corpofun FUNFECHA
    (12) Args -> Args . VIR VarArgs

    FECHAP          shift and go to state 26
    VIR             shift and go to state 27


state 17

    (10) Funcao -> FUNABRE WORD ABREP FECHAP . Corpofun FUNFECHA
    (15) Corpofun -> . RETURN Result PV
    (16) Corpofun -> . IF ABREP Cond FECHAP Corpofun ELSE Corpofun

    RETURN          shift and go to state 29
    IF              shift and go to state 30

    Corpofun                       shift and go to state 28

state 18

    (11) Args -> VarArgs .

    FECHAP          reduce using rule 11 (Args -> VarArgs .)
    VIR             reduce using rule 11 (Args -> VarArgs .)


state 19

    (62) VarArgs -> BOOL .

    FECHAP          reduce using rule 62 (VarArgs -> BOOL .)
    VIR             reduce using rule 62 (VarArgs -> BOOL .)
    NEXT            reduce using rule 62 (VarArgs -> BOOL .)
    FECHAL          reduce using rule 62 (VarArgs -> BOOL .)


state 20

    (63) VarArgs -> NUMBER .

    FECHAP          reduce using rule 63 (VarArgs -> NUMBER .)
    VIR             reduce using rule 63 (VarArgs -> NUMBER .)
    NEXT            reduce using rule 63 (VarArgs -> NUMBER .)
    FECHAL          reduce using rule 63 (VarArgs -> NUMBER .)


state 21

    (64) VarArgs -> Opern . NUMBER

    NUMBER          shift and go to state 31


state 22

    (65) VarArgs -> ListArg .

    FECHAP          reduce using rule 65 (VarArgs -> ListArg .)
    VIR             reduce using rule 65 (VarArgs -> ListArg .)
    NEXT            reduce using rule 65 (VarArgs -> ListArg .)
    FECHAL          reduce using rule 65 (VarArgs -> ListArg .)


state 23

    (40) Opern -> ADD .

    NUMBER          reduce using rule 40 (Opern -> ADD .)
    ABREP           reduce using rule 40 (Opern -> ADD .)
    WORD            reduce using rule 40 (Opern -> ADD .)
    BOOL            reduce using rule 40 (Opern -> ADD .)
    ABREL           reduce using rule 40 (Opern -> ADD .)


state 24

    (41) Opern -> MINUS .

    NUMBER          reduce using rule 41 (Opern -> MINUS .)
    ABREP           reduce using rule 41 (Opern -> MINUS .)
    WORD            reduce using rule 41 (Opern -> MINUS .)
    BOOL            reduce using rule 41 (Opern -> MINUS .)
    ABREL           reduce using rule 41 (Opern -> MINUS .)


state 25

    (67) ListArg -> ABREL . FECHAL
    (68) ListArg -> ABREL . ConjuntoListaArgs FECHAL
    (69) ListArg -> ABREL . VarArgs NEXT Conjunto2ListaArgs FECHAL
    (70) ConjuntoListaArgs -> . VarArgs
    (71) ConjuntoListaArgs -> . ConjuntoListaArgs VIR VarArgs
    (62) VarArgs -> . BOOL
    (63) VarArgs -> . NUMBER
    (64) VarArgs -> . Opern NUMBER
    (65) VarArgs -> . ListArg
    (66) VarArgs -> . WORD
    (40) Opern -> . ADD
    (41) Opern -> . MINUS
    (67) ListArg -> . ABREL FECHAL
    (68) ListArg -> . ABREL ConjuntoListaArgs FECHAL
    (69) ListArg -> . ABREL VarArgs NEXT Conjunto2ListaArgs FECHAL

    FECHAL          shift and go to state 32
    BOOL            shift and go to state 19
    NUMBER          shift and go to state 20
    WORD            shift and go to state 15
    ADD             shift and go to state 23
    MINUS           shift and go to state 24
    ABREL           shift and go to state 25

    ConjuntoListaArgs              shift and go to state 33
    VarArgs                        shift and go to state 34
    Opern                          shift and go to state 21
    ListArg                        shift and go to state 22

state 26

    (9) Funcao -> FUNABRE WORD ABREP Args FECHAP . Corpofun FUNFECHA
    (15) Corpofun -> . RETURN Result PV
    (16) Corpofun -> . IF ABREP Cond FECHAP Corpofun ELSE Corpofun

    RETURN          shift and go to state 29
    IF              shift and go to state 30

    Corpofun                       shift and go to state 35

state 27

    (12) Args -> Args VIR . VarArgs
    (62) VarArgs -> . BOOL
    (63) VarArgs -> . NUMBER
    (64) VarArgs -> . Opern NUMBER
    (65) VarArgs -> . ListArg
    (66) VarArgs -> . WORD
    (40) Opern -> . ADD
    (41) Opern -> . MINUS
    (67) ListArg -> . ABREL FECHAL
    (68) ListArg -> . ABREL ConjuntoListaArgs FECHAL
    (69) ListArg -> . ABREL VarArgs NEXT Conjunto2ListaArgs FECHAL

    BOOL            shift and go to state 19
    NUMBER          shift and go to state 20
    WORD            shift and go to state 15
    ADD             shift and go to state 23
    MINUS           shift and go to state 24
    ABREL           shift and go to state 25

    VarArgs                        shift and go to state 36
    Opern                          shift and go to state 21
    ListArg                        shift and go to state 22

state 28

    (10) Funcao -> FUNABRE WORD ABREP FECHAP Corpofun . FUNFECHA

    FUNFECHA        shift and go to state 37


state 29

    (15) Corpofun -> RETURN . Result PV
    (34) Result -> . Opern Varoper
    (35) Result -> . Opern ABREP Result FECHAP
    (36) Result -> . Varoper
    (37) Result -> . Result Oper Varoper
    (38) Result -> . ABREP Result FECHAP
    (39) Result -> . Result Oper ABREP Result FECHAP
    (40) Opern -> . ADD
    (41) Opern -> . MINUS
    (49) Varoper -> . Chamadafun
    (50) Varoper -> . Var
    (60) Chamadafun -> . WORD ABREP FECHAP
    (61) Chamadafun -> . WORD ABREP Conjunto FECHAP
    (51) Var -> . NUMBER
    (52) Var -> . BOOL
    (53) Var -> . List
    (54) Var -> . WORD
    (55) List -> . ABREL FECHAL
    (56) List -> . ABREL Conjunto FECHAL
    (57) List -> . ABREL Result NEXT Conjunto2 FECHAL

    ABREP           shift and go to state 41
    ADD             shift and go to state 23
    MINUS           shift and go to state 24
    WORD            shift and go to state 44
    NUMBER          shift and go to state 45
    BOOL            shift and go to state 46
    ABREL           shift and go to state 48

    Result                         shift and go to state 38
    Opern                          shift and go to state 39
    Varoper                        shift and go to state 40
    Chamadafun                     shift and go to state 42
    Var                            shift and go to state 43
    List                           shift and go to state 47

state 30

    (16) Corpofun -> IF . ABREP Cond FECHAP Corpofun ELSE Corpofun

    ABREP           shift and go to state 49


state 31

    (64) VarArgs -> Opern NUMBER .

    FECHAP          reduce using rule 64 (VarArgs -> Opern NUMBER .)
    VIR             reduce using rule 64 (VarArgs -> Opern NUMBER .)
    NEXT            reduce using rule 64 (VarArgs -> Opern NUMBER .)
    FECHAL          reduce using rule 64 (VarArgs -> Opern NUMBER .)


state 32

    (67) ListArg -> ABREL FECHAL .

    FECHAP          reduce using rule 67 (ListArg -> ABREL FECHAL .)
    VIR             reduce using rule 67 (ListArg -> ABREL FECHAL .)
    NEXT            reduce using rule 67 (ListArg -> ABREL FECHAL .)
    FECHAL          reduce using rule 67 (ListArg -> ABREL FECHAL .)


state 33

    (68) ListArg -> ABREL ConjuntoListaArgs . FECHAL
    (71) ConjuntoListaArgs -> ConjuntoListaArgs . VIR VarArgs

    FECHAL          shift and go to state 50
    VIR             shift and go to state 51


state 34

    (69) ListArg -> ABREL VarArgs . NEXT Conjunto2ListaArgs FECHAL
    (70) ConjuntoListaArgs -> VarArgs .

    NEXT            shift and go to state 52
    FECHAL          reduce using rule 70 (ConjuntoListaArgs -> VarArgs .)
    VIR             reduce using rule 70 (ConjuntoListaArgs -> VarArgs .)


state 35

    (9) Funcao -> FUNABRE WORD ABREP Args FECHAP Corpofun . FUNFECHA

    FUNFECHA        shift and go to state 53


state 36

    (12) Args -> Args VIR VarArgs .

    FECHAP          reduce using rule 12 (Args -> Args VIR VarArgs .)
    VIR             reduce using rule 12 (Args -> Args VIR VarArgs .)


state 37

    (10) Funcao -> FUNABRE WORD ABREP FECHAP Corpofun FUNFECHA .

    FECHAFP         reduce using rule 10 (Funcao -> FUNABRE WORD ABREP FECHAP Corpofun FUNFECHA .)
    FUNABRE         reduce using rule 10 (Funcao -> FUNABRE WORD ABREP FECHAP Corpofun FUNFECHA .)


state 38

    (15) Corpofun -> RETURN Result . PV
    (37) Result -> Result . Oper Varoper
    (39) Result -> Result . Oper ABREP Result FECHAP
    (42) Oper -> . Opern
    (43) Oper -> . TIMES
    (44) Oper -> . DIVIDE
    (45) Oper -> . MOD
    (46) Oper -> . OR
    (47) Oper -> . AND
    (48) Oper -> . Conds
    (40) Opern -> . ADD
    (41) Opern -> . MINUS
    (27) Conds -> . MENOR
    (28) Conds -> . MAIOR
    (29) Conds -> . IGUAL
    (30) Conds -> . DIFERENTE
    (31) Conds -> . MAIORIGUAL
    (32) Conds -> . MENORIGUAL
    (33) Conds -> . IN

    PV              shift and go to state 54
    TIMES           shift and go to state 57
    DIVIDE          shift and go to state 58
    MOD             shift and go to state 59
    OR              shift and go to state 60
    AND             shift and go to state 61
    ADD             shift and go to state 23
    MINUS           shift and go to state 24
    MENOR           shift and go to state 63
    MAIOR           shift and go to state 64
    IGUAL           shift and go to state 65
    DIFERENTE       shift and go to state 66
    MAIORIGUAL      shift and go to state 67
    MENORIGUAL      shift and go to state 68
    IN              shift and go to state 69

    Oper                           shift and go to state 55
    Opern                          shift and go to state 56
    Conds                          shift and go to state 62

state 39

    (34) Result -> Opern . Varoper
    (35) Result -> Opern . ABREP Result FECHAP
    (49) Varoper -> . Chamadafun
    (50) Varoper -> . Var
    (60) Chamadafun -> . WORD ABREP FECHAP
    (61) Chamadafun -> . WORD ABREP Conjunto FECHAP
    (51) Var -> . NUMBER
    (52) Var -> . BOOL
    (53) Var -> . List
    (54) Var -> . WORD
    (55) List -> . ABREL FECHAL
    (56) List -> . ABREL Conjunto FECHAL
    (57) List -> . ABREL Result NEXT Conjunto2 FECHAL

    ABREP           shift and go to state 71
    WORD            shift and go to state 44
    NUMBER          shift and go to state 45
    BOOL            shift and go to state 46
    ABREL           shift and go to state 48

    Varoper                        shift and go to state 70
    Chamadafun                     shift and go to state 42
    Var                            shift and go to state 43
    List                           shift and go to state 47

state 40

    (36) Result -> Varoper .

    PV              reduce using rule 36 (Result -> Varoper .)
    TIMES           reduce using rule 36 (Result -> Varoper .)
    DIVIDE          reduce using rule 36 (Result -> Varoper .)
    MOD             reduce using rule 36 (Result -> Varoper .)
    OR              reduce using rule 36 (Result -> Varoper .)
    AND             reduce using rule 36 (Result -> Varoper .)
    ADD             reduce using rule 36 (Result -> Varoper .)
    MINUS           reduce using rule 36 (Result -> Varoper .)
    MENOR           reduce using rule 36 (Result -> Varoper .)
    MAIOR           reduce using rule 36 (Result -> Varoper .)
    IGUAL           reduce using rule 36 (Result -> Varoper .)
    DIFERENTE       reduce using rule 36 (Result -> Varoper .)
    MAIORIGUAL      reduce using rule 36 (Result -> Varoper .)
    MENORIGUAL      reduce using rule 36 (Result -> Varoper .)
    IN              reduce using rule 36 (Result -> Varoper .)
    FECHAP          reduce using rule 36 (Result -> Varoper .)
    NEXT            reduce using rule 36 (Result -> Varoper .)
    FECHAL          reduce using rule 36 (Result -> Varoper .)
    VIR             reduce using rule 36 (Result -> Varoper .)


state 41

    (38) Result -> ABREP . Result FECHAP
    (34) Result -> . Opern Varoper
    (35) Result -> . Opern ABREP Result FECHAP
    (36) Result -> . Varoper
    (37) Result -> . Result Oper Varoper
    (38) Result -> . ABREP Result FECHAP
    (39) Result -> . Result Oper ABREP Result FECHAP
    (40) Opern -> . ADD
    (41) Opern -> . MINUS
    (49) Varoper -> . Chamadafun
    (50) Varoper -> . Var
    (60) Chamadafun -> . WORD ABREP FECHAP
    (61) Chamadafun -> . WORD ABREP Conjunto FECHAP
    (51) Var -> . NUMBER
    (52) Var -> . BOOL
    (53) Var -> . List
    (54) Var -> . WORD
    (55) List -> . ABREL FECHAL
    (56) List -> . ABREL Conjunto FECHAL
    (57) List -> . ABREL Result NEXT Conjunto2 FECHAL

    ABREP           shift and go to state 41
    ADD             shift and go to state 23
    MINUS           shift and go to state 24
    WORD            shift and go to state 44
    NUMBER          shift and go to state 45
    BOOL            shift and go to state 46
    ABREL           shift and go to state 48

    Result                         shift and go to state 72
    Opern                          shift and go to state 39
    Varoper                        shift and go to state 40
    Chamadafun                     shift and go to state 42
    Var                            shift and go to state 43
    List                           shift and go to state 47

state 42

    (49) Varoper -> Chamadafun .

    PV              reduce using rule 49 (Varoper -> Chamadafun .)
    TIMES           reduce using rule 49 (Varoper -> Chamadafun .)
    DIVIDE          reduce using rule 49 (Varoper -> Chamadafun .)
    MOD             reduce using rule 49 (Varoper -> Chamadafun .)
    OR              reduce using rule 49 (Varoper -> Chamadafun .)
    AND             reduce using rule 49 (Varoper -> Chamadafun .)
    ADD             reduce using rule 49 (Varoper -> Chamadafun .)
    MINUS           reduce using rule 49 (Varoper -> Chamadafun .)
    MENOR           reduce using rule 49 (Varoper -> Chamadafun .)
    MAIOR           reduce using rule 49 (Varoper -> Chamadafun .)
    IGUAL           reduce using rule 49 (Varoper -> Chamadafun .)
    DIFERENTE       reduce using rule 49 (Varoper -> Chamadafun .)
    MAIORIGUAL      reduce using rule 49 (Varoper -> Chamadafun .)
    MENORIGUAL      reduce using rule 49 (Varoper -> Chamadafun .)
    IN              reduce using rule 49 (Varoper -> Chamadafun .)
    FECHAP          reduce using rule 49 (Varoper -> Chamadafun .)
    NEXT            reduce using rule 49 (Varoper -> Chamadafun .)
    FECHAL          reduce using rule 49 (Varoper -> Chamadafun .)
    VIR             reduce using rule 49 (Varoper -> Chamadafun .)
    CONDAND         reduce using rule 49 (Varoper -> Chamadafun .)
    CONDOR          reduce using rule 49 (Varoper -> Chamadafun .)


state 43

    (50) Varoper -> Var .

    PV              reduce using rule 50 (Varoper -> Var .)
    TIMES           reduce using rule 50 (Varoper -> Var .)
    DIVIDE          reduce using rule 50 (Varoper -> Var .)
    MOD             reduce using rule 50 (Varoper -> Var .)
    OR              reduce using rule 50 (Varoper -> Var .)
    AND             reduce using rule 50 (Varoper -> Var .)
    ADD             reduce using rule 50 (Varoper -> Var .)
    MINUS           reduce using rule 50 (Varoper -> Var .)
    MENOR           reduce using rule 50 (Varoper -> Var .)
    MAIOR           reduce using rule 50 (Varoper -> Var .)
    IGUAL           reduce using rule 50 (Varoper -> Var .)
    DIFERENTE       reduce using rule 50 (Varoper -> Var .)
    MAIORIGUAL      reduce using rule 50 (Varoper -> Var .)
    MENORIGUAL      reduce using rule 50 (Varoper -> Var .)
    IN              reduce using rule 50 (Varoper -> Var .)
    FECHAP          reduce using rule 50 (Varoper -> Var .)
    NEXT            reduce using rule 50 (Varoper -> Var .)
    FECHAL          reduce using rule 50 (Varoper -> Var .)
    VIR             reduce using rule 50 (Varoper -> Var .)
    CONDAND         reduce using rule 50 (Varoper -> Var .)
    CONDOR          reduce using rule 50 (Varoper -> Var .)


state 44

    (60) Chamadafun -> WORD . ABREP FECHAP
    (61) Chamadafun -> WORD . ABREP Conjunto FECHAP
    (54) Var -> WORD .

    ABREP           shift and go to state 73
    PV              reduce using rule 54 (Var -> WORD .)
    TIMES           reduce using rule 54 (Var -> WORD .)
    DIVIDE          reduce using rule 54 (Var -> WORD .)
    MOD             reduce using rule 54 (Var -> WORD .)
    OR              reduce using rule 54 (Var -> WORD .)
    AND             reduce using rule 54 (Var -> WORD .)
    ADD             reduce using rule 54 (Var -> WORD .)
    MINUS           reduce using rule 54 (Var -> WORD .)
    MENOR           reduce using rule 54 (Var -> WORD .)
    MAIOR           reduce using rule 54 (Var -> WORD .)
    IGUAL           reduce using rule 54 (Var -> WORD .)
    DIFERENTE       reduce using rule 54 (Var -> WORD .)
    MAIORIGUAL      reduce using rule 54 (Var -> WORD .)
    MENORIGUAL      reduce using rule 54 (Var -> WORD .)
    IN              reduce using rule 54 (Var -> WORD .)
    FECHAP          reduce using rule 54 (Var -> WORD .)
    NEXT            reduce using rule 54 (Var -> WORD .)
    FECHAL          reduce using rule 54 (Var -> WORD .)
    VIR             reduce using rule 54 (Var -> WORD .)
    CONDAND         reduce using rule 54 (Var -> WORD .)
    CONDOR          reduce using rule 54 (Var -> WORD .)


state 45

    (51) Var -> NUMBER .

    PV              reduce using rule 51 (Var -> NUMBER .)
    TIMES           reduce using rule 51 (Var -> NUMBER .)
    DIVIDE          reduce using rule 51 (Var -> NUMBER .)
    MOD             reduce using rule 51 (Var -> NUMBER .)
    OR              reduce using rule 51 (Var -> NUMBER .)
    AND             reduce using rule 51 (Var -> NUMBER .)
    ADD             reduce using rule 51 (Var -> NUMBER .)
    MINUS           reduce using rule 51 (Var -> NUMBER .)
    MENOR           reduce using rule 51 (Var -> NUMBER .)
    MAIOR           reduce using rule 51 (Var -> NUMBER .)
    IGUAL           reduce using rule 51 (Var -> NUMBER .)
    DIFERENTE       reduce using rule 51 (Var -> NUMBER .)
    MAIORIGUAL      reduce using rule 51 (Var -> NUMBER .)
    MENORIGUAL      reduce using rule 51 (Var -> NUMBER .)
    IN              reduce using rule 51 (Var -> NUMBER .)
    FECHAP          reduce using rule 51 (Var -> NUMBER .)
    NEXT            reduce using rule 51 (Var -> NUMBER .)
    FECHAL          reduce using rule 51 (Var -> NUMBER .)
    VIR             reduce using rule 51 (Var -> NUMBER .)
    CONDAND         reduce using rule 51 (Var -> NUMBER .)
    CONDOR          reduce using rule 51 (Var -> NUMBER .)


state 46

    (52) Var -> BOOL .

    PV              reduce using rule 52 (Var -> BOOL .)
    TIMES           reduce using rule 52 (Var -> BOOL .)
    DIVIDE          reduce using rule 52 (Var -> BOOL .)
    MOD             reduce using rule 52 (Var -> BOOL .)
    OR              reduce using rule 52 (Var -> BOOL .)
    AND             reduce using rule 52 (Var -> BOOL .)
    ADD             reduce using rule 52 (Var -> BOOL .)
    MINUS           reduce using rule 52 (Var -> BOOL .)
    MENOR           reduce using rule 52 (Var -> BOOL .)
    MAIOR           reduce using rule 52 (Var -> BOOL .)
    IGUAL           reduce using rule 52 (Var -> BOOL .)
    DIFERENTE       reduce using rule 52 (Var -> BOOL .)
    MAIORIGUAL      reduce using rule 52 (Var -> BOOL .)
    MENORIGUAL      reduce using rule 52 (Var -> BOOL .)
    IN              reduce using rule 52 (Var -> BOOL .)
    FECHAP          reduce using rule 52 (Var -> BOOL .)
    NEXT            reduce using rule 52 (Var -> BOOL .)
    FECHAL          reduce using rule 52 (Var -> BOOL .)
    VIR             reduce using rule 52 (Var -> BOOL .)
    CONDAND         reduce using rule 52 (Var -> BOOL .)
    CONDOR          reduce using rule 52 (Var -> BOOL .)


state 47

    (53) Var -> List .

    PV              reduce using rule 53 (Var -> List .)
    TIMES           reduce using rule 53 (Var -> List .)
    DIVIDE          reduce using rule 53 (Var -> List .)
    MOD             reduce using rule 53 (Var -> List .)
    OR              reduce using rule 53 (Var -> List .)
    AND             reduce using rule 53 (Var -> List .)
    ADD             reduce using rule 53 (Var -> List .)
    MINUS           reduce using rule 53 (Var -> List .)
    MENOR           reduce using rule 53 (Var -> List .)
    MAIOR           reduce using rule 53 (Var -> List .)
    IGUAL           reduce using rule 53 (Var -> List .)
    DIFERENTE       reduce using rule 53 (Var -> List .)
    MAIORIGUAL      reduce using rule 53 (Var -> List .)
    MENORIGUAL      reduce using rule 53 (Var -> List .)
    IN              reduce using rule 53 (Var -> List .)
    FECHAP          reduce using rule 53 (Var -> List .)
    NEXT            reduce using rule 53 (Var -> List .)
    FECHAL          reduce using rule 53 (Var -> List .)
    VIR             reduce using rule 53 (Var -> List .)
    CONDAND         reduce using rule 53 (Var -> List .)
    CONDOR          reduce using rule 53 (Var -> List .)


state 48
